--- a/FallonNavBar/css/styles.css
+++ b/FallonNavBar/css/styles.css
@@ -35,3 +35,11 @@ header.mountains {
     background-position: center;
   }
 }
+.navbar {
+background-color: #FEF7E9;
+}
+body {
+background-color: #1E3D5E;
+}
+
+.card{ background-color: #1E3D5E}
